argo-cd/fileserver/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fileserver
  labels:
    service: fileserver
spec:
  replicas: 1
  selector:
    matchLabels:
      service: fileserver
  template:
    metadata:
      labels:
        service: fileserver
    spec:
      restartPolicy: Always
      volumes:
        - name: fileserver
          persistentVolumeClaim:
            claimName: fileserver
      containers:
        - image: nginx:1.21.3
          imagePullPolicy: IfNotPresent
          name: fileserver
          ports:
            - containerPort: 80
          # volumeMounts:
          #   - mountPath: "/usr/share/nginx/html"
          #     name: fileserver
          volumeMounts:
          - name: indexhtml
            mountPath: /usr/share/nginx/html
      volumes:
      - name: indexhtml
        configMap:
          name: indexhtml
