argo-cd/fileserver/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: fileserver
  labels:
    service: fileserver
spec:
  ports:
    - name: http
      port: 80
  selector:
    service: fileserver
